# capstone-project

./: .gitignore  README.md  compose.yaml  justfile  makefile  schema-1113-2025.json
backend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.dev.yml  docker-compose.noapi.yml  justfile  makefile  rustfmt.toml  seed.pgsql
backend/.sqlx/: query-018446fe9c86ae9343e017e950781809f56df149f5d99b8c8c8725cfe092d5ad.json  query-02c6b88662a0167cc00d56ad93d7a18c25941a26cf06b3c56d167d1b07e9077a.json  query-0923a239cb886a550ff4a4a350e7dff6a72dd0fe647b8b2142de9a78691fd164.json  query-0b7af4aa3bf315974a4d73f37681a3737e54e94d8a44f66569413e21262cd7f3.json  query-0cb779c9e1ae9235e8874d33fc2b2888c7884eba032572bfb24ac73681995d62.json  query-0e0e5c99e14f7c7b27ae68bd2f9d352f8183b1b13b30303a3af869495b7d8d8c.json  query-1febb1a9ab1465765e22da9f3a15ae197f7ccf535d899cae616badd40cdc39ce.json  query-25025a712e9cdd0354921ef2061ad4a27ec1600193ddf2acb8f121e971d5fe40.json  query-2637cec9b043a6a17ab256cfdbea3caa58a4315a213fbfe325b3878b95c0d71c.json  query-315f18c847a705cb47332c7df03c51986bbf4c7f21a997ad83d1f1ba6e91adea.json  query-41c0f1c1d6b190164b40734d9fb37d9aa2507253e3a25abd128af9c0d3399b67.json  query-42fb242a9537e05ded15412e6430fd5255e0f4c4c05c4a4689f0ffa34f714bc8.json  query-45af026799f4758e4397c989d287ce73ffec57d05a1607f87d03a34a1d2f265f.json  query-464358f2fa8807cf18ba56ac7704df18324b74b10a6f08f9ceb29439a843f1bb.json  query-492ad022f37cf77129808e4987ee60a3eeba561e84024729d988c15f1dca7e6d.json  query-4b7106d7f0559d7049f9847d2d7079d34310ad5ba422b89f5392c4e6d20c914f.json  query-4f3e55f5cf4cbc8568aa5b6b02db1711c6c52e552dd4cbc96543b3eb91e3d003.json  query-5142a220aa8555e668e06223840a398a905e2f136722b93b40456dd8e671b769.json  query-5a0d802eea266cbe6eff8e22cd0febb4b3ec8097cb8745512824e991dcebbfb0.json  query-615ea82fbb43bcea9f9ce65e6248fbbc1c65fe24c3f21f3bb51c051307f679ba.json  query-63eab710ba7aee132f4925ef1ce57c45bb80be33c4398c7aad2d44bb3cc2cf4a.json  (+37 more)
backend/assets/: assets.json  (+1 more)
(+204 files in other folders)
