[package]
name = "capstone-project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
chrono = { version = "0.4.42", features = ["serde"] }
const_env = "0.1.2"
dotenvy = "0.15.7"
email_address = "0.2.9"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "tls-native-tls",
    "postgres",
    "runtime-async-std",
    "derive",
    "chrono",
] }
sqlx-cli = "0.8.6"
# strum = { version = "0.27.2", features = ["derive"] }
